添加语音增益c文件

--- a/app/src/main/res/layout/activity_voice.xml
+++ b/app/src/main/res/layout/activity_voice.xml
@@ -19,4 +19,12 @@
         android:layout_below="@id/btn"
         android:layout_centerHorizontal="true"
         android:text="播放" />
+
+    <Button
+        android:id="@+id/copy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btn"
+        android:layout_centerHorizontal="true"
+        android:text="复制" />
 </RelativeLayout>
