--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,10 +77,17 @@
         android:layout_below="@id/stop"
         android:text="录音" />
 
+    <Button
+        android:id="@+id/testList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/record"
+        android:text="list" />
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/record"
+        android:layout_below="@id/testList"
         android:layout_weight="1"
         android:padding="2dp">
 
