--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context="lcq.com.androidtest.MainActivity">
 
     <EditText
@@ -108,6 +109,4 @@
             android:scaleType="fitXY"
             android:src="@drawable/waveformbg" />
     </RelativeLayout>
-
-
 </RelativeLayout>
