--- a/app/src/main/res/layout/activity_voice.xml
+++ b/app/src/main/res/layout/activity_voice.xml
@@ -24,7 +24,15 @@
         android:id="@+id/copy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/btn"
+        android:layout_below="@id/play"
         android:layout_centerHorizontal="true"
         android:text="复制" />
+
+    <SeekBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/seek"
+        android:max="30"
+        android:layout_below="@id/copy"
+        />
 </RelativeLayout>
