--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="lcq.com.androidtest.MainActivity">
+    tools:context="lcq.com.androidtest.Main1Activity">
 
     <EditText
         android:id="@+id/name"
